fixed line break in output panel, adjusted output panel padding/margin

--- a/styles/monkey.less
+++ b/styles/monkey.less
@@ -66,8 +66,8 @@ autocomplete-suggestion-list .icon-container:empty {
 
 .monkey-console {
 
-    height:15em;
-    padding:1em;
+    height:16em;
+    margin:1em;
     position:relative;
     -moz-user-select: text;
      -khtml-user-select: text;
@@ -82,7 +82,7 @@ autocomplete-suggestion-list .icon-container:empty {
     }
 
     .info-messages {
-        max-height:15em;
+        max-height:16em;
         overflow:scroll;
 
         li {
